[project]
name = "hash-cache"
version = "0.1.0"
description = "python utility for caching function results"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "cloudpickle>=3.1.1",
    "dask>=2025.1.0",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "toolz>=1.0.0",
    "urllib3>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "pre-commit>=4.2.0",
    "ruff>=0.6.7",
]
